Added welcome div

--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,11 @@ footer {
     text-align: center;
 }
 
+#welcome {
+    text-align: center;
+    font-size: x-large;
+    padding-top: 30px;
+    
+}
+
 
